[profile.release-lto]
inherits = "release"
lto = true

[profile.dev-dbg]
inherits = "release"
debug = true

[package]
name = "paraselene"
version = "0.1.0"
edition = "2021"

[dependencies]
hashbrown = "0.13.2"
hex = { git = "https://github.com/a-underscore/hex", branch = "0.3.0" }
hex_instance = { git = "https://github.com/a-underscore/hex_instance", branch = "0.3.0" }
hex_physics = { git = "https://github.com/a-underscore/hex_physics", branch = "0.3.0" }
image = "0.25.5"
noise = "0.8.2"
rand = "0.8.5"
rayon = "1.6.1"
serde = "1.0.163"
serde_derive = "1.0.163"
serde_json = "1.0.96"
